--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: ael-kass <ael-kass@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/19 15:14:51 by ael-kass          #+#    #+#              #
-#    Updated: 2021/11/19 17:22:49 by ael-kass         ###   ########.fr        #
+#    Updated: 2021/11/28 19:43:18 by ael-kass         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,10 +14,14 @@ NAME = philo
 
 CC = gcc
 
-FLAGS = -Wall -Wextra -Werror -pthread -g -fsanitize=address
+FLAGS = -Wall -Wextra -Werror -pthread -g
 
 SRCS = ./ft_atoi.c \
 		./tools.c \
+		./actions.c \
+		./supervisor.c \
+		./parsing.c \
+		./initialization.c \
 		./main.c
 
 INCLUDE = philosophers.h
